# directory_cleaner

./: .gitignore  .pre-commit-config.yaml  README.md  create_directory_cleaner_test_dirs.sh  directory_cleaner.py  directory_cleaner_test.py  gen_coverage.sh  pyproject.toml  run_shell_test.sh  shell_test_create_test_files.sh  shell_test_run.sh
.github/workflows/: main.yml  pre-commit.yml
configs/: empty.toml  taskcluster_mac.toml  taskcluster_unix.toml
configs/testing_only/: missing.toml
directory_cleaner/: directory_cleaner.py  directory_cleaner_test.py  main.py  main_test.py
tc_directory_cleaner/: directory_cleaner.py  directory_cleaner_test.py
