[tool.poetry]
name = "directory_cleaner"
version = "0.1.0"
description = ""
authors = ["Andrew Erickson <aerickson@mozilla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
directory_cleaner = "directory_cleaner.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
black = "^24.1.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
